welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:10: error: not found: value estSurbiscuit
while(porteBiscuit() && !estSurbiscuit()) {
                         ^